Closed Bug 720396 Opened 14 years ago Closed 13 years ago

[jsdbg2] Assertion failure: isObjectOrNull(), at js/src/jsapi.h:547

Categories

(Core :: JavaScript Engine, defect)

x86_64
Linux
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla16

People

(Reporter: decoder, Assigned: evilpies)

Details

(Keywords: assertion, testcase)

Attachments

(1 file)

The following test asserts on mozilla-central 1962ca549264 (options -m -n): var g = newGlobal('new-compartment'); var dbg1 = new Debugger; var gw1 = dbg1.addDebuggee(g); var dbg2 = new Debugger; var gw2 = dbg2.addDebuggee((gw1.__proto__));
Attached patch fixSplinter Review
Assignee: jorendorff → evilpies
Status: NEW → ASSIGNED
Attachment #633882 - Flags: review?(jorendorff)
Comment on attachment 633882 [details] [diff] [review] fix Great. Thanks.
Attachment #633882 - Flags: review?(jorendorff) → review+
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla16
Automatically extracted testcase for this bug was committed: https://hg.mozilla.org/mozilla-central/rev/efaf8960a929
Flags: in-testsuite+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: