Bug 720396 - Fix Debugger.addDebuggee with Debuger.prototype. r=jorendorff